# code-review-slack-bot

./: .env.example  .gitignore  ACCESS_INFO.txt  DEPLOYMENT.md  MOBILE_ACCESS.md  PROJECT_STRUCTURE.md  README.md  generate_mobile_qr.sh  pyproject.toml  requirements.txt  show_current_url.sh  start.sh  status.sh  stop.sh
app/: config.py  database.py  main.py
docs/: AI_SETUP_GUIDE.md  AUTOMATION_COMPLETE.md  AUTO_SYNC_FIX.md  CHANGELOG.md  CUSTOM_UI_DESIGN.md  DASHBOARD_QUICK_START.md  DASHBOARD_SUMMARY.md  DYNAMIC_REFRESH_IMPLEMENTATION.md  EMAIL_SETUP_GUIDE.md  GET_SLACK_TOKENS.md  IMPLEMENTATION_SUMMARY.md  LIVE_SYNC_IMPLEMENTATION.md  MOBILE_ACCESS_SOLUTION.md  MOBILE_TROUBLESHOOTING.md  MUST_DO_FOR_MOBILE.txt  PASSWORD_RESET_QUICKSTART.md  PUBLIC_ACCESS_GUIDE.md  PUBLIC_WEBSOCKET_SETUP.md  QR_CODE_IMPLEMENTATION.md  QUICK_MOBILE_ACCESS.md  README.md  SETUP_CREDENTIALS.md  SETUP_GUIDE.md  SYNC_STATUS_UPDATE_FIX.md  TEST_RESULTS.md  WEBHOOK_SETUP_GUIDE.md
scripts/: CHECK_STATUS.sh  FIX_MOBILE_ACCESS.sh  SETUP_PUBLIC_ACCESS.sh  SHOW_QR.sh  START_SERVICES.sh  STOP_SERVICES.sh  diagnose_mobile_access.sh  fix_ssl.sh  start_ngrok_tunnel.sh  start_persistent_tunnel.sh  start_public_tunnel.sh  tunnel_keepalive.sh
tests/: test_ai_integration.py  test_dashboard_actions.py  test_e2e.py  test_github_notification.py  test_github_write.py  test_health.py  test_pr_flow.py  test_real_pr.py  test_webhook_endpoint.py
utils/: auto_sync_service.py  broadcast_update.py  create_test_pr.py  fetch_new_pr.py  setup_webhook.py  show_public_url.py  show_qr_code.py  sync_github_prs.py  (+2 more)
(+21 files in other folders)
